[package]
name = "eth2_hashing"
version = "0.3.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Hashing primitives used in Ethereum 2.0"

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
cpufeatures = { version = "0.2.5", optional = true }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
rustc-hex = "2.1.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.18"

[features]
default = ["zero_hash_cache", "detect-cpufeatures"]
zero_hash_cache = ["lazy_static", "lazy_static/spin_no_std"]
detect-cpufeatures = ["cpufeatures"]
std = []
