[package]
name = "eth2_ssz_types"
version = "0.2.2"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"
description = "Provides types with unique properties required for SSZ serialization and Merklization."
license = "Apache-2.0"

[lib]
name = "ssz_types"

[dependencies]
tree_hash = { version = "0.4.1", default-features = false, path = "../tree_hash" }
serde = { version = "1.0.116", default-features = false, features = ["derive"] }
eth2_serde_utils = { version = "0.1.1", path = "../serde_utils", default-features = false }
eth2_ssz = { version = "0.4.1", path = "../ssz", default-features = false }
typenum = { version = "1.12.0", features = ["no_std"] }
arbitrary = { version = "1.0", features = ["derive"], optional = true }
derivative = { version = "2.1.1", features = ["use_core"] }
smallvec = "1.8.0"
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive", "max-encoded-len"
] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.58"
tree_hash_derive = { version = "0.4.0", path = "../tree_hash_derive" }

[features]
std = [
    "tree_hash/std",
    "serde/std",
    "eth2_serde_utils/std",
    "eth2_ssz/std",
    "codec/std",
]
default = ["std"]
